<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidDialog</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_dialog">消息框</string>
    <string name="sure_dialog">确定对话框</string>
    <string name="txt_dialog">文本对话框</string>
    <string name="radio_dialog">单选对话框</string>
    <string name="choice_dialog">对选对话框</string>
    <string name="list_dialog">列表对话框</string>
    <string name="pic_dialog">图片对话框</string>

</resources>
