<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_dialog_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_dialog" />

    <Button
        android:id="@+id/btn_dialog_sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sure_dialog" />

    <Button
        android:id="@+id/btn_dialog_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_dialog" />

    <Button
        android:id="@+id/btn_dialog_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_dialog" />

    <Button
        android:id="@+id/btn_dialog_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice_dialog" />

    <Button
        android:id="@+id/btn_dialog_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_dialog" />

    <Button
        android:id="@+id/btn_dialog_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pic_dialog" />

</LinearLayout>